# LTL_checker

./: CMakeLists.txt  Lexer.h  cow_string.h  draw.py  graph.cpp  graph.h  main.cpp  ptl_graph.cpp  ptl_graph.h  timer.h
